syntax = "proto3";

option java_multiple_files = true;
option java_package = "test.grpc.greet";

package greet;

service Greet {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
